# F4HWN

./: .clang-format  .clang-tidy  AGENTS.md  CMakeLists.txt  CMakePresets.json  Dockerfile  FORMATTING.md  Makefile  README.md  README_BADAPPLE.md  compile-with-docker.sh
App/: CMakeLists.txt  am_fix.c  am_fix.h  audio.c  audio.h  bitmaps.c  bitmaps.h  board.c  board.h  dcs.c  dcs.h  debugging.h  font.c  font.h  frequencies.c  frequencies.h  functions.c  functions.h  init.c  main.c  misc.c  misc.h  radio.c  radio.h  scheduler.c  scheduler.h  screenshot.c  settings.c  settings.h  sram-overlay.c  sram-overlay.h  version.c  version.h
App/app/: action.c  action.h  aircopy.c  aircopy.h  app.c  app.h  aprs.c  aprs.h  bad_apple.c  bad_apple.h  bad_apple_frames.h  breakout.c  breakout.h  chFrScanner.c  chFrScanner.h  common.c  dtmf.c  dtmf.h  flashlight.c  flashlight.h  fm.c  fm.h  generic.c  generic.h  keyboard_state.h  main.c  main.h  menu.c  menu.h  rega.c  rega.h  scanner.c  scanner.h  spectrum.c  spectrum.h  uart.c  uart.h
App/driver/: adc.c  adc.h  aes.c  backlight.c  backlight.h  bk1080-regs.h  bk1080.c  bk1080.h  bk4819-regs.h  bk4819.c  bk4819.h  bk4829.c  crc.c  eeprom.c  eeprom.h  eeprom_compat.c  flash.h  gpio.h  i2c.c  i2c.h  keyboard.c  keyboard.h  py25q16.c  py25q16.h  spi.c  spi.h  st7565.c  st7565.h  system.c  system.h  systick.c  systick.h  uart.c  uart.h  vcp.c  vcp.h  voice.c  voice.h
App/helper/: battery.c  battery.h  boot.c  boot.h
App/ui/: aircopy.c  aircopy.h  aprs.c  aprs.h  battery.c  battery.h  fmradio.c  fmradio.h  helper.c  helper.h  inputbox.c  inputbox.h  lock.c  lock.h  main.c  main.h  menu.c  menu.h  scanner.c  scanner.h  status.c  status.h  ui.c  ui.h  welcome.c
App/usb/: usb_config.h  usbd_cdc_if.c
scripts/: refactor_conditionals.py
task/: aprs-plan.md
tools/badapple/: frames_data.h  process_badapple.py  pyproject.toml
tools/unbrick_k5_v1/: README.md
